kqed_dev4/src/objects/Web_Premium_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated__c</fullName>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Benefit__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Web Premium Schedules</relationshipLabel>
        <relationshipName>Web_Premium_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Scheduling__c</fullName>
        <label>Premium Scheduling</label>
        <referenceTo>Premium_Scheduling__c</referenceTo>
        <relationshipLabel>Web Premium Schedules</relationshipLabel>
        <relationshipName>Web_Premium_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>placeholder for time info HH:MM:SS</description>
        <inlineHelpText>placeholder for time info HH:MM:SS</inlineHelpText>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Web Premium Schedule</label>
    <nameField>
        <label>Web Premium Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Premium Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>